--- a/pine.cabal
+++ b/pine.cabal
@@ -20,4 +20,5 @@ executable pine
   build-depends:       base >= 4.7 && < 5,
                        scotty,
                        text,
-                       aeson
+                       aeson,
+                       elm-street
