pushing test files

--- a/pine.cabal
+++ b/pine.cabal
@@ -21,4 +21,7 @@ executable pine
                        scotty,
                        text,
                        aeson,
-                       elm-street
+                       elm-street,
+                       text-conversions,
+                       hint
+  other-modules:       Types
